ferritin/src/snapshots/ferritin__tests__get_markdown_test_interactive_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_interactive_for_tests_rooted(Commands::get(\"fixture-crate::markdown_test\"),\n& get_fixture_crate_path ())"
---
"   Item: markdown_test                                                         ╻"
"   Kind: Module                                                                ┃"
"   Visibility: Public                                                          ┃"
"   Defined at: fixture_crate::markdown_test                                    ┃"
"   In crate: fixture-crate (0.1.0)                                             ┃"
"                                                                               ┃"
"   Markdown: Syntax                                                            ┃"
"   ════════════════════════════════════════════════════════════════════════════┃"
"                                                                               ┃"
"     ◦ Overview                                                                ┃"
"         ▪ Philosophy                                                          ┃"
"                                                                               ┃"
"         ▪ Inline HTML                                                         ┃"
"                                                                               ┃"
"         ▪ Automatic Escaping for Special Characters                           ┃"
"                                                                               ┃"
"     ◦ Block Elements                                                          ┃"
"         ▪ Paragraphs and Line Breaks                                          ┃"
"                                                                               ┃"
"         ▪ Headers                                                             ┃"
"                                                                               ┃"
"         ▪ Blockquotes                                                         ┃"
"                                                                               ┃"
"         ▪ Lists                                                               ┃"
"                                                                               ┃"
"         ▪ Code Blocks                                                         ┃"
"                                                                               ┃"
"         ▪ Horizontal Rules                                                    ┃"
"                                                                               ┃"
"     ◦ Span Elements                                                           ┃"
"         ▪ Links                                                               ┃"
"                                                                               ┃"
"         ▪ Emphasis                                                            ┃"
"                                                                               ┃"
"         ▪ Code                                                                ┃"
"                                                                               ┃"
"         ▪ Images                                                              ┃"
"                                                                               ┃"
"     ◦ Miscellaneous                                                           ┃"
"         ▪ Backslash Escapes                                                   ┃"
"                                                                               ┃"
"         ▪ Automatic Links                                                     ┃"
"                                                                               ┃"
"   Note: This document is itself written using Markdown; you can see the       ┃"
"   source for it by adding '.text' to the URL.                                 ┃"
"                                                                               ┃"
"─── • ─── • ─── • ─── • ─── • ─── • ─── • ─── • ─── • ─── • ─── • ─── • ─── • ─┃"
"                                                                               ┃"
"   Overview                                                                    ┃"
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┃"
"                                                                               ┃"
"   Philosophy                                                                  ┃"
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┃"
"                                                                               ┃"
"   Markdown is intended to be as easy-to-read and easy-to-write as is feasible.┃"
"                                                                               ┃"
"   Readability, however, is emphasized above all else. A Markdown-formatted    ┃"
"   document should be publishable as-is, as plain text, without looking like   ┃"
"   it's been marked up with tags or formatting instructions. While Markdown's  ┃"
"   syntax has been influenced by several existing text-to-HTML filters --      ┃"
"   including Setext, atx, Textile, reStructuredText, Grutatext, and EtText --  ┃"
"   the single biggest source of inspiration for Markdown's syntax is the       ┃"
"   format of plain text email.                                                 ┃"
"                                                                               ┃"
"   Block Elements                                                              ┃"
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┃"
"                                                                               ┃"
"   Paragraphs and Line Breaks                                                  ┃"
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┃"
"                                                                               ┃"
"   A paragraph is simply one or more consecutive lines of text, separated by   ┃"
"   one or more blank lines. (A blank line is any line that looks like a blank  ┃"
"   line -- a line containing nothing but spaces or tabs is considered blank.)  ┃"
"   Normal paragraphs should not be indented with spaces or tabs.               ┃"
"                                                                               ┃"
"   The implication of the "one or more consecutive lines of text" rule is that ┃"
"   Markdown supports "hard-wrapped" text paragraphs. This differs significantly┃"
"   from most other text-to-HTML formatters (including Movable Type's "Convert  ┃"
"   Line Breaks" option) which translate every line break character in a        ┃"
"   paragraph into a <br /> tag.                                                ┃"
"                                                                               ┃"
"   When you do want to insert a <br /> break tag using Markdown, you end a     ┃"
"   line with two or more spaces, then type return.                             ┃"
"                                                                               ┃"
"   Headers                                                                     ┃"
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┃"
"                                                                               ┃"
"   Markdown supports two styles of headers, Setext 1 and atx 2.                ┃"
"                                                                               ┃"
"   Optionally, you may "close" atx-style headers. This is purely cosmetic --   ┃"
"   you can use this if you think it looks better. The closing hashes don't     ┃"
"   even need to match the number of hashes used to open the header. (The       ┃"
"   number of opening hashes determines the header level.)                      ┃"
"                                                                               ┃"
"   Blockquotes                                                                 ┃"
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┃"
"                                                                               ┃"
"   Markdown uses email-style > characters for blockquoting. If you're familiar ┃"
"   with quoting passages of text in an email message, then you know how to     ╹"
"   create a blockquote in Markdown. It looks best if you hard wrap the text     "
"   and put a > before every line:                                               "
"                                                                                "
"     ┃ This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,    "
"     ┃ consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.       "
"     ┃ Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.   "
"     ┃                                                                          "
"     ┃ Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse id "
"     ┃ sem consectetuer libero luctus adipiscing.                               "
"                                                                                "
"   Markdown allows you to be lazy and only put the > before the first line of   "
"   a hard-wrapped paragraph:                                                    "
"                                                                                "
"     ┃ This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,    "
"     ┃ consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.       "
"     ┃ Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.   "
"                                                                                "
"     ┃ Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse id "
"     ┃ sem consectetuer libero luctus adipiscing.                               "
"                                                                                "
"   Blockquotes can be nested (i.e. a blockquote-in-a-blockquote) by adding      "
"   additional levels of >:                                                      "
"                                                                                "
"     ┃ This is the first level of quoting.                                      "
"     ┃                                                                          "
"     ┃   ┃ This is nested blockquote.                                           "
"     ┃                                                                          "
"     ┃ Back to the first level.                                                 "
"                                                                                "
"   Blockquotes can contain other Markdown elements, including headers, lists,   "
"   and code blocks:                                                             "
"                                                                                "
"     ┃ This is a header.                                                        "
"     ┃ ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"     ┃                                                                          "
"     ┃   ▪ This is the first list item.                                         "
"     ┃                                                                          "
"     ┃   ▪ This is the second list item.                                        "
"     ┃                                                                          "
"     ┃ Here's some example code:                                                "
"     ┃                                                                          "
"     ╭───────────────────────────────────────────────❬rust❭─╮                   "
"     │ return shell_exec("echo $input | $markdown_script"); │                   "
"     ╰──────────────────────────────────────────────────────╯                   "
"                                                                                "
"                                                                                "
"   Any decent text editor should make email-style quoting easy. For example,    "
"   with BBEdit, you can make a selection and choose Increase Quote Level from   "
"   the Text menu.                                                               "
"                                                                                "
"   Lists                                                                        "
"   ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"                                                                                "
"   Markdown supports ordered (numbered) and unordered (bulleted) lists.         "
"                                                                                "
"   Unordered lists use asterisks, pluses, and hyphens -- interchangably -- as   "
"   list markers:                                                                "
"                                                                                "
"     ◦ Red                                                                      "
"                                                                                "
"     ◦ Green                                                                    "
"                                                                                "
"     ◦ Blue                                                                     "
"                                                                                "
"   is equivalent to:                                                            "
"                                                                                "
"     ◦ Red                                                                      "
"                                                                                "
"     ◦ Green                                                                    "
"                                                                                "
"     ◦ Blue                                                                     "
"                                                                                "
"   and:                                                                         "
"                                                                                "
"     ◦ Red                                                                      "
"                                                                                "
"     ◦ Green                                                                    "
"                                                                                "
"     ◦ Blue                                                                     "
"                                                                                "
"   Ordered lists use numbers followed by periods:                               "
"                                                                                "
"     ◦ Bird                                                                     "
"                                                                                "
"     ◦ McHale                                                                   "
"                                                                                "
"     ◦ Parish                                                                   "
"                                                                                "
"   It's important to note that the actual numbers you use to mark the list      "
"   have no effect on the HTML output Markdown produces. The HTML Markdown       "
"   produces from the above list is:                                             "
"                                                                                "
"   If you instead wrote the list in Markdown like this:                         "
"                                                                                "
"     ◦ Bird                                                                     "
"                                                                                "
"     ◦ McHale                                                                   "
"                                                                                "
"     ◦ Parish                                                                   "
"▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂"
"   ferritin - q:quit ?:help ←/→:history g:go s:search l:list c:code             "
